--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@ header img{
     max-width: 100px;
 }
 
-nav a{
+.menu-itens{
     font-family: 'Nunito', sans-serif;
     font-style: italic;
     font-size: 20px;
-    color: hsl(0, 0%, 9%);
+    color: #171717;
     margin: 20px;
     transition: 0.3s;
 }
 
-nav a:hover{
+.menu-itens:hover{
     transform: scale(1.1);
 }
 
@@ -35,7 +35,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: hsl(179, 100%, 33%);
+    background-color: #00a8a5;
 }
 
 main{
@@ -104,24 +104,36 @@ i:hover{
 #player-spotify{
     display: flex;
     justify-content: center;
-    margin: 20px;
+    padding: 5%;
 }
 
-#discografia{
-    display: flex;
-    justify-content: center;
+#texto-sobre{
+    max-width: 60%;
+    margin: 0 auto;
+}
+
+#tabela-disc{
+    margin: 0 auto;
 }
 
 .albums-sobre{
     max-width: 100px;
     border-radius: 10px;
+    box-shadow: 0 8px 32px 0 rgba(23,23,23,0.5);
 }
 
 table{
-    border-collapse: collapse;  
-    max-width: 500px;
+    background: linear-gradient(180deg, rgba(23,23,23,1) 0%, rgba(0,168,165,1) 51%, rgba(23,23,23,1) 100%);
+    border-radius: 10px;
 }
 
 td, th{
-    border: 1px hsl(179, 100%, 33%) solid;
+    font-family: 'Nunito', sans-serif;
+    color: #FFFBFA;
+    font-size: 16px;
+    padding: 25px;
+}
+
+td{
+    border-top: 1px solid rgba( 255, 255, 255, 0.18 );
 }
