--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://api.fontshare.com/v2/css?f[]=nunito@300,301&f[]=bebas-neue@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito&display=swap');
 
 /* Configuração geral de todas as páginas */
 
